Fix navigation spacing

--- a/assets/_sass/styles.scss
+++ b/assets/_sass/styles.scss
@@ -55,7 +55,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
     }
   }
 
-  ul {
+   ul {
     margin-top: -1em;
     list-style-type: decimal;
     list-style-position: inside;
@@ -65,6 +65,10 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
       margin-left: 3em;
       color: $black;
     }
+  }
+
+  #navigation_bar ul {
+   margin-top: 1em;
   }
 
   h1 {
